本地化适配：JDK17兼容、本地MySQL/Redis、清理敏感配置